# datafix

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
datafix/: __init__.py  collector.py  datanode.py  logic.py  resultnode.py  session.py  validator.py
datafix/core/: __init__.py  action.py  adapter.py  collector.py  datanode.py  logic.py  node.py  resultnode.py  session.py  utils.py  validator.py
datafix/ui/: qt_utils.py  tree.py  validator.py  view.py
datafix/wip/: discover.py  paclish.py
datafix_ui/: validator.py
examples/: basic_example.py
examples/hotkeys/: hotkey_functions.py
examples/nodes/: basic_nodes.py  callable_node.py  group_node.py  widget_nodes.py
pac/: discover.py  logic.py  main.py  paclish.py  port.py
pac2/: __init__.py  blender.py  collector.py  node.py  nodes.py  qt.py
pac2_sample/: main.py
pac_sample/: main.py
pipe2_template/: validate_nodes.py
pipe_template/: manager.py  validate_nodes.py
tests/: actions.py  blender.py  test_action.py  test_adapter.py  test_collector.py  test_connection.py  test_node.py  test_node_state_setter.py  test_revalidate_instance.py  test_simple.py  test_validate_instances.py  test_validation_order.py  test_validator.py  validate_nodes.py
tests2/: test_node.py  test_validate.py
tests_old/: test_action.py  test_adapter.py  test_collector.py  test_connection.py  test_pipeline.py  test_revalidate_instance.py  test_simple.py  test_validate_instances.py  test_validation_order.py  test_validator.py
ui_demo/: __init__.py  qt_utils.py  validator.py  view.py
(+43 files in other folders)
