[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "datafix"
authors = [
    {name = "Hannes"},
]
description = "descr"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["dcc", "app", "application", "pipeline"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    'importlib-metadata; python_version<"3.7"',
]

#dynamic = ["version"]
version = "0.0.1"

[project.urls]
Homepage = "https://github.com/hannesdelbeke/datafix"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 120

